Use only proxied search endpoint in TraceDetail
